# IncomFlow

./: .gitignore  CMakeLists.txt  README.md
share/python/: plot_mesh.py
src/incomflow/: CMakeLists.txt
src/incomflow/include/incomflow/: icfBdry.h  icfEdge.h  icfFlowData.h  icfIO.h  icfList.h  icfMesh.h  icfNode.h  icfTri.h  icfTypes.h  minunit.h
src/incomflow/src/: bstrlib.c  icfBdry.c  icfEdge.c  icfFlowData.c  icfIO.c  icfList.c  icfMesh.c  icfNode.c  icfTri.c  main.c
src/incomflow/test/: basic_tests.c  basic_tests.h  icfIO_tests.c  icfIO_tests.h  unit_tests.c
